# MultimediaProcessing

Huffman/: main.cpp
Huffman/study/: fileencodinganddecoding.cpp  files.cpp  graphviz.txt  p  tabla.txt
MedianCut/: CMakeLists.txt  Procedimiento.MD  histograms.cpp  main.cpp
OrderedDithering/: CMakeLists.txt  build_and_run.ps1  cpp.cpp  main.cpp  ptrmain.cpp  visualization.py
